--- a/bitbots_ros_control/config/controller.yaml
+++ b/bitbots_ros_control/config/controller.yaml
@@ -12,37 +12,23 @@ joint_state_controller:
 DynamixelController:
   type: bitbots_ros_control/DynamixelController
   joints:
-      - HeadPan
-      - HeadTilt
-      - LShoulderPitch
-      - LShoulderRoll
-      - LElbow
       - RShoulderPitch
-      - RShoulderRoll
-      - RElbow
-      - LHipYaw
-      - LHipRoll
-      - LHipPitch
-      - LKnee
-      - LAnklePitch
-      - LAnkleRoll
-      - RHipYaw
-      - RHipRoll
-      - RHipPitch
-      - RKnee
-      - RAnklePitch
-      - RAnkleRoll
+
 
 
 TestController:
   type: position_controllers/JointPositionController
   joint: No4
-  pid: {p: 50.0, i: 0.00, d: 0.4}
+  pid: {p: 50.0, i: 0.00, d: 0.0}
 
 TestController2:
   type: effort_controllers/JointPositionController
-  joint: HeadPan  
-  pid: {p: 50.0, i: 0.00, d: 0.4}
+  joint: LShoulderPitch  
+  pid: {p: 0.05, i: 0.00, d: 0.0, i_clamp: 4.0 }
+
+TestController3:
+  type: effort_controllers/JointEffortController
+  joint: RShoulderPitch    
 
 JointGroupController:
   type: position_controllers/JointGroupPositionController
@@ -71,46 +57,8 @@ JointGroupController:
 JointGroupControllerEffort:
   type: effort_controllers/JointGroupPositionController
   joints: 
-    - HeadPan
-    - HeadTilt
-    - LShoulderPitch
-    - LShoulderRoll
-    - LElbow
     - RShoulderPitch
-    - RShoulderRoll
-    - RElbow
-    - LHipYaw
-    - LHipRoll
-    - LHipPitch
-    - LKnee
-    - LAnklePitch
-    - LAnkleRoll
-    - RHipYaw
-    - RHipRoll
-    - RHipPitch
-    - RKnee
-    - RAnklePitch
-    - RAnkleRoll
-  HeadPan:        { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  HeadTilt:       { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LShoulderPitch: { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LShoulderRoll:  { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LElbow:         { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RShoulderPitch: { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RShoulderRoll:  { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RElbow:         { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LHipYaw:        { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LHipRoll:       { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LHipPitch:      { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LKnee:          { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  LAnklePitch:    { pid: { p: 5.0, i: 0.00, d: 0.2, i_clamp: 0.5 } }
-  LAnkleRoll:     { pid: { p: 5.0, i: 0.00, d: 0.2, i_clamp: 0.5 } }
-  RHipYaw:        { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RHipRoll:       { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RHipPitch:      { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RKnee:          { pid: { p: 50.0, i: 0.00, d: 1.0, i_clamp: 4.0 } }
-  RAnklePitch:    { pid: { p: 5.0, i: 0.00, d: 0.2, i_clamp: 0.5 } }
-  RAnkleRoll:     { pid: { p: 5.0, i: 0.00, d: 0.2, i_clamp: 0.5 } }
+  RShoulderPitch: { pid: { p: 50.0, i: 0.00, d: 0.0, i_clamp: 4.0 } }
 
 
 TrajectoryController:
