--- a/bitbots_ros_control/config/wolfgang.yaml
+++ b/bitbots_ros_control/config/wolfgang.yaml
@@ -1,24 +1,24 @@
 ros_control:
   # specifies which information should be read
   read_position: true
-  read_velocity: false
-  read_effort: false
-  read_volt_temp: true # this also corresponds for the error byte
+  read_velocity: true
+  read_effort: true
+  read_volt_temp: false # this also corresponds for the error byte
   read_pressure: false
   VT_update_rate: 100 # how many normal (position) reads have to be performed before one time the temperature, voltage and error is read
   warn_temp: 60
   warn_volt: 12
-  read_imu: true
+  read_imu: false
   onlySensors: false
   control_loop_hz: 1000
 
   # specification of the connected dynamixel servos
   dynamixels:
     port_info:
-      port_name: /dev/ttyACM0
-      baudrate: 2000000
+      port_name: /dev/ttyUSB3
+      baudrate: 4000000
       protocol_version: 2
-    control_mode: position
+    control_mode: effort
     auto_torque: true
     set_ROM_RAM: true # set the following values on startup to all motors
     ROM_RAM:
@@ -32,7 +32,7 @@ ros_control:
       PWM_Limit: 885 # 885 = 100%
       #Current_Limit: 2047 #[ 3.36 mA] #currently not used since MX-64 and MX-106 have different max values
       Acceleration_Limit: 32767 # [214.577 Rev/min2]
-      Velocity_Limit: 360 # [0.229rpm]
+      Velocity_Limit: 1023 # [0.229rpm]
       Max_Position_Limit: 4095 # [0.088 deg]
       Min_Position_Limit : 0 # [0.088 deg]
       # RAM
