--- a/bitbots_ros_control/config/wolfgang.yaml
+++ b/bitbots_ros_control/config/wolfgang.yaml
@@ -8,7 +8,7 @@ ros_control:
   VT_update_rate: 100 # how many normal (position) reads have to be performed before one time the temperature, voltage and error is read
   warn_temp: 60
   warn_volt: 12
-  read_imu: true
+  read_imu: false
   onlySensors: false
   control_loop_hz: 1000
 
@@ -46,65 +46,11 @@ ros_control:
       Feedforward_1st_Gain: 0 # [/4]
 
     device_info:
-      RShoulderPitch:
-        id: 1
-        model_number: 311
-      LShoulderPitch:
+      HeadPan:
         id: 2
         model_number: 311
-      RShoulderRoll:
-        id: 3
-        model_number: 321
-      LShoulderRoll:
-        id: 4
-        model_number: 311
-      RElbow:
-        id: 5
-        model_number: 321
-      LElbow:
-        id: 6
-        model_number: 311
-      RHipYaw:
-        id: 7
-        model_number: 321
-      LHipYaw:
-        id: 8
-        model_number: 321
-      RHipRoll:
-        id: 9
-        model_number: 321
-      LHipRoll:
-        id: 10
-        model_number: 321
-      RHipPitch:
-        id: 11
-        model_number: 321
-      LHipPitch:
-        id: 12
-        model_number: 321
-      RKnee:
-        id: 13
-        model_number: 321
-      LKnee:
-        id: 14
-        model_number: 321
-      RAnklePitch:
-        id: 15
-        model_number: 321
-      LAnklePitch:
-        id: 16
-        model_number: 321
-      RAnkleRoll:
-        id: 17
-        model_number: 321
-      LAnkleRoll:
-        id: 18
-        model_number: 321
-      HeadPan:
-        id: 19
-        model_number: 311
       HeadTilt:
-        id: 20
+        id: 1
         model_number: 311
       
 
